--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ CouchDB
 PyYAML
 click
 flowcell_parser @ git+https://github.com/SciLifeLab/flowcell_parser
+Levenshtein
 pandas
 python_crontab
 python_dateutil
