--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -22,8 +22,13 @@ jobs:
         run: pip install -e .
       - name: pytest
         # Default options are configured in pyproject.toml
-        run: pytest --cov=./taca --cov-report=xml --cov-report term-missing -vv
+        run: pytest --cov=./taca --junitxml=junit.xml -o junit_family=legacy --cov-report=xml term-missing -vv
       - name: CodeCov
         uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
